# behavioural-experiments

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  analyze.py  config.yaml  config_iterated.yaml  database.py  database_v2.py  openrouter_client.py  parser.py  prompts.json  prompts_variations.json  pyproject.toml  runner.py  runner_ablations.py  runner_v2.py
configs/: config_allais.yaml  config_pd_expansion.yaml  config_pg_wave1.yaml  config_pg_wave2.yaml  config_pg_wave3.yaml  config_ultimatum.yaml  config_wave1.yaml
docs/: EXPERIMENT_OVERVIEW.md  IMPROVEMENTS.md  PRESENTATION_REPORT.md  PROJECT_STRUCTURE.md  RUN_INSTRUCTIONS.md
prompts/: wave1_baseline.txt
scenarios/: allais_abstract.txt  allais_business.txt  allais_community.txt  allais_research.txt  pg_abstract.txt  pg_business.txt  pg_community.txt  pg_research.txt  ultimatum_abstract.txt  ultimatum_business.txt  ultimatum_community.txt  ultimatum_research.txt  wave1_pd_abstract.txt  wave1_pd_business.txt  wave1_pd_environment.txt  wave1_pd_gameshow.txt  wave1_pd_research.txt
scenarios_v2/: pd_v2_01_sales_territory.txt  pd_v2_02_sales_pricing.txt  pd_v2_03_marketing_launch.txt  pd_v2_04_marketing_influencer.txt  pd_v2_05_hr_poaching.txt  pd_v2_06_hr_salary.txt  pd_v2_07_coding_bounty.txt  pd_v2_08_coding_contract.txt  pd_v2_09_legal_strategy.txt  pd_v2_10_legal_expert.txt  pd_v2_11_research_patent.txt  pd_v2_12_research_funding.txt  pd_v2_13_governance_budget.txt  pd_v2_14_startup_investor.txt  pd_v2_15_coding_opensource.txt  pd_v2_16_coding_review.txt  pd_v2_17_research_coauthor.txt  (+46 more)
(+41 files in other folders)
